--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <ul id="nav-mobile" class="right hide-on-med-and-down show-on-large-only">
             <li><a href="#login">Login</a></li>
             <li><a href="#signup">Register</a></li>
-            <li><a href="cart.html"><i class="material-icons">shopping_cart</i></a></li>
+            <li><a href="cart.html"><i class="fa fa-bars"></i></a></li>
           </ul>
 
           <ul class="collapsible left" data-collapsible="expandable">
