--- a/products.html
+++ b/products.html
@@ -30,12 +30,12 @@
           <ul id="nav-mobile" class="right hide-on-med-and-down show-on-large-only">
             <li><a href="#login">Login</a></li>
             <li><a href="#signup">Register</a></li>
-            <li><a href="cart.html"><i class="material-icons">shopping_cart</i></a></li>
+            <li><a href="cart.html"><i class="fa fa-shopping-cart"></i></a></li>
           </ul>
 
           <ul class="collapsible left" data-collapsible="expandable">
             <li>
-              <div class="collapsible-header show-on-med-and-down hide-on-large-only"><i class="material-icons">toc</i></div>
+              <div class="collapsible-header show-on-med-and-down hide-on-large-only"><i class="fa fa-bars"></i></div>
 
               <div class="collapsible-body">
                 <a href="#login">Login</a>
